--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: black;
+  /*background: var(--background);*/
+  background: white;
   font-family: Arial, Helvetica, sans-serif;
 }
