--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 :root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -19,4 +22,11 @@ body {
   /*background: var(--background);*/
   background: white;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+main{
+  display: grid;
+  grid: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 1%;
+  margin: 2vh 0;
 }
