modal detalle de producto

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -84,3 +84,10 @@
       }
     }
   }
+
+  .sign-in-btn{
+    font-size: .8rem;
+    font-weight: 600;
+    text-decoration: underline;
+    cursor: pointer;
+  }
